feat: created useState for header and added new component IntroSection.tsx with styles

--- a/src/components/Button/Button.css
+++ b/src/components/Button/Button.css
@@ -1,7 +1,7 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Roboto+Flex:opsz,wght@8..144,100..1000&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=DM+Mono:ital,wght@0,300;0,400;0,500;1,300;1,400;1,500&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Roboto+Flex:opsz,wght@8..144,100..1000&display=swap');
 
 .button{
-    font-family: "Roboto Flex", sans-serif;
+    font-family: "DM Mono", sans-serif;
     height: 35%;
     cursor: pointer;
     background-color: black;
@@ -13,11 +13,9 @@
 .active{
     font-size: 24px;
     border-bottom: 2px #edd4c8 solid;
-    border-radius: 4px;
     transition: all 0.3s;
-    color: #edd4c8;
 }
 
 .button:hover{
-    color: #edd4c8;
+    color: #edddd8;
 }
