--- a/src/components/MainSection/MainSection.css
+++ b/src/components/MainSection/MainSection.css
@@ -1,3 +1,7 @@
+/**{*/
+/*    outline: 1px solid green !important;*/
+/*}*/
+
 .main{
     margin: 0;
     height: 562px;
@@ -13,13 +17,15 @@
     flex-direction: column;
     gap: 20px;
     width: 30%;
-    padding: 130px 50px;
+    padding: 130px 50px 0 50px;
+    margin-bottom: 200px;
 }
 
 .intro-title{
     margin: 0;
     font-size: 60px;
     font-weight: bold;
+    color: #41aaea;
 }
 
 .intro-description{
@@ -38,7 +44,7 @@ a{
 .intro-button{
     height: 50px;
     width: 40%;
-    background-color: #63c3fb;
+    background-color: #f16cc7;
     margin-top: 30px;
     display: flex;
     align-items: center;
@@ -48,6 +54,14 @@ a{
 
 .story-title{
     text-align: center;
+    color: #41aaea;
+}
+
+.story-info{
+    display: flex;
+    flex-direction: row;
+    margin: 30px;
+
 }
 
 .story-tabs{
@@ -57,9 +71,48 @@ a{
     align-items: flex-start;
     margin-right: 0;
 }
-.story{
-    display: flex;
-    flex-direction: row;
-    margin: 30px;
-    gap: 50px;
+
+.story-active-button{
+    font-family: "DM Mono", sans-serif;
+    background-color: #222222;
+    width: 15rem;
+    height: 3rem;
+    border: none;
+    font-weight: bolder;
+    font-size: 16px;
+    margin-right: 0;
+    color: #f16cc7;
+    transition: all 0.3s;
 }
+
+.story-button{
+    font-family: "DM Mono", sans-serif;
+    width: 15rem;
+    height: 3rem;
+    border: none;
+    font-weight: 400;
+    font-size: 16px;
+    margin-right: 0;
+    background-color: black;
+    color: white;
+    transition: all 0.3s;
+}
+
+.story-description{
+    display: flex;
+    gap: 3rem;
+    margin-left: 0;
+    background-color: #222222;
+    padding: 40px 50px;
+}
+
+.story-quote{
+    color: #f16cc7;
+    border: none;
+    border-left: 2px solid #f16cc7;
+    padding-left: 10px;
+    height: 3rem;
+    display: flex;
+    align-items: center;
+}
+
