--- a/src/components/MainSection/MainSection.css
+++ b/src/components/MainSection/MainSection.css
@@ -2,6 +2,17 @@
 /*    outline: 1px solid green !important;*/
 /*}*/
 
+h2{
+    font-size: 35px;
+}
+
+a{
+    text-decoration: none;
+    font-weight: bold;
+    font-size: 20px;
+    color: black;
+}
+
 .main{
     margin: 0;
     height: 562px;
@@ -9,7 +20,7 @@
     background-size: 100%;
     color: white;
     background-repeat: no-repeat;
-    font-family: "DM Mono", sans-serif;
+    font-family: "Poppins", sans-serif;
 }
 
 .intro{
@@ -34,13 +45,6 @@
     font-size: 20px;
 }
 
-a{
-    text-decoration: none;
-    font-weight: bold;
-    font-size: 20px;
-    color: black;
-}
-
 .intro-button{
     height: 50px;
     width: 40%;
@@ -53,8 +57,11 @@ a{
 }
 
 .story-title{
-    text-align: center;
+    align-items: center;
+    justify-content: center;
     color: #41aaea;
+    display: flex;
+    gap: 100px;
 }
 
 .story-info{
@@ -73,7 +80,7 @@ a{
 }
 
 .story-active-button{
-    font-family: "DM Mono", sans-serif;
+    font-family: "Poppins", sans-serif;
     background-color: #222222;
     width: 15rem;
     height: 3rem;
@@ -82,11 +89,12 @@ a{
     font-size: 16px;
     margin-right: 0;
     color: #f16cc7;
+    cursor: pointer;
     transition: all 0.3s;
 }
 
 .story-button{
-    font-family: "DM Mono", sans-serif;
+    font-family: "Poppins", sans-serif;
     width: 15rem;
     height: 3rem;
     border: none;
@@ -95,6 +103,7 @@ a{
     margin-right: 0;
     background-color: black;
     color: white;
+    cursor: pointer;
     transition: all 0.3s;
 }
 
@@ -116,3 +125,14 @@ a{
     align-items: center;
 }
 
+.story{
+    margin-bottom: 100px;
+}
+
+.actors-title{
+    align-items: center;
+    justify-content: center;
+    color: #41aaea;
+    display: flex;
+    gap: 100px;
+}
