feat: added QuestionsSection.tsx and NetflixSection

--- a/src/components/MainSection/MainSection.css
+++ b/src/components/MainSection/MainSection.css
@@ -4,6 +4,7 @@
 
 h2{
     font-size: 35px;
+    margin: 0;
 }
 
 a{
@@ -45,7 +46,7 @@ a{
     font-size: 20px;
 }
 
-.intro-button{
+.intro-button, .netflix-button{
     height: 50px;
     width: 40%;
     background-color: #f16cc7;
@@ -68,7 +69,6 @@ a{
     display: flex;
     flex-direction: row;
     margin: 30px;
-
 }
 
 .story-tabs{
@@ -143,4 +143,67 @@ a{
     gap: 20px;
     align-items: center;
     justify-content: center;
+}
+
+.actors{
+    margin-bottom: 100px;
+}
+
+.questions{
+    display: flex;
+    gap: 7rem;
+    margin: 30px;
+}
+
+.questions-intro{
+    color: #41aaea;
+    display: flex;
+    flex-direction: column;
+    margin-left: 40px;
+}
+
+.questions-intro img{
+    margin-top: 40px;
+    height: 70%;
+}
+
+.questions-title{
+    color: #a0d9fb;
+}
+
+.questions-answers{
+    background-color: #222222;
+    padding: 40px 50px;
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+}
+
+.question{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.question-text{
+    color: #f16cc7;
+    font-size: 20px;
+}
+
+.netflix{
+    margin: 100px 30px 100px 70px;
+    display: flex;
+    gap: 15rem;
+}
+
+.netflix-info{
+    display: flex;
+    gap: 30px;
+    flex-direction: column;
+    width: 500px;
+    height: 365px;
+}
+
+.netflix-title{
+    color: #41aaea;
 }
