feat: filtered all styles

--- a/src/components/Button/Button.css
+++ b/src/components/Button/Button.css
@@ -1,4 +1,4 @@
-.button{
+.button-header{
     font-family: "Poppins", sans-serif;
     height: 35%;
     cursor: pointer;
@@ -15,9 +15,22 @@
     transition: all 0.3s;
 }
 
-.button:hover{
+.button-header:hover, .button.footer:hover{
     color: #edddd8;
 }
 
+.button-footer{
+    padding-bottom: 0;
+    font-size: 16px;
+    background-color: #222222;
+    border: none;
+    color: white;
+}
+
+.button-footer:hover{
+    cursor: pointer;
+    color: #b6b6b6;
+    transition: all 0.3s;
+}
 
 
