--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -8,14 +8,14 @@
     background-color: #222222;
 }
 
+.footer-logo a{
+    color: white;
+    font-size: 30px;
+}
+
 .footer-logo p{
     margin-top: -5px;
     text-align: center;
-}
-
-.footer-contact{
-    display: flex;
-    gap: 10px;
 }
 
 .footer-nav{
@@ -30,12 +30,7 @@
     align-items: flex-start;
 }
 
-/*.button{*/
-/*    padding-bottom: 0;*/
-/*    font-size: 16px;*/
-/*    background-color: #222222;*/
-/*}*/
-
-/*.button:hover{*/
-/*    border-bottom: 2px white solid;*/
-/*}*/
+.footer-contact{
+    display: flex;
+    gap: 10px;
+}
