--- a/src/components/MainSection/MainSection.css
+++ b/src/components/MainSection/MainSection.css
@@ -1,5 +1,5 @@
 /**{*/
-/*    outline: 1px solid green !important;*/
+/*    outline: 2px solid green !important;*/
 /*}*/
 
 h2{
@@ -16,20 +16,25 @@ a{
 
 .main{
     margin: 0;
-    background-image: url("../../images/background-intro.png");
-    background-size: 100%;
     color: white;
-    background-repeat: no-repeat;
     font-family: "Poppins", sans-serif;
 }
 
 .intro{
+    background-image: url("../../images/background-intro.png");
+    background-repeat: no-repeat;
+    background-size: 100%;
+    width: 100%;
+    margin-bottom: 100px;
+    height: 536px;
+}
+
+.intro-container{
+    width: 30%;
     display: flex;
     flex-direction: column;
-    gap: 20px;
-    width: 30%;
+    gap: 30px;
     padding: 130px 50px 0 50px;
-    margin-bottom: 200px;
 }
 
 .intro-title{
@@ -45,7 +50,7 @@ a{
     font-size: 20px;
 }
 
-.intro-button, .netflix-button{
+.intro-button{
     height: 50px;
     width: 40%;
     background-color: #f16cc7;
@@ -54,6 +59,10 @@ a{
     align-items: center;
     justify-content: center;
     border-radius: 5px;
+}
+
+.story{
+    margin-bottom: 100px;
 }
 
 .story-title{
@@ -124,7 +133,7 @@ a{
     align-items: center;
 }
 
-.story{
+.actors{
     margin-bottom: 100px;
 }
 
@@ -144,10 +153,6 @@ a{
     justify-content: center;
 }
 
-.actors{
-    margin-bottom: 100px;
-}
-
 .questions{
     display: flex;
     gap: 7rem;
@@ -161,13 +166,13 @@ a{
     margin-left: 40px;
 }
 
+.questions-intro span{
+    color: #a0d9fb;
+}
+
 .questions-intro img{
     margin-top: 40px;
     height: 70%;
-}
-
-.questions-title{
-    color: #a0d9fb;
 }
 
 .questions-answers{
@@ -176,17 +181,6 @@ a{
     display: flex;
     flex-direction: column;
     gap: 1rem;
-}
-
-.question{
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-}
-
-.question-text{
-    color: #f16cc7;
-    font-size: 20px;
 }
 
 .netflix{
@@ -205,4 +199,15 @@ a{
 
 .netflix-title{
     color: #41aaea;
+}
+
+.netflix-button{
+    height: 50px;
+    width: 40%;
+    background-color: #f16cc7;
+    margin-top: 30px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border-radius: 5px;
 }
