--- a/src/components/TerritoriesSection/PiltoverSection/PiltoverSection.module.css
+++ b/src/components/TerritoriesSection/PiltoverSection/PiltoverSection.module.css
@@ -1,4 +1,4 @@
-.piltover-info{
+.piltover_info{
     display: flex;
     gap: 5px;
     color: #DECEB2;
@@ -7,18 +7,18 @@
     margin-bottom: 100px;
 }
 
-.piltover-info-letter{
+.piltover_info_letter{
     font-size: 36px;
     color: #cfbb8f;
 }
 
-.piltover-info p, .piltover-video  p{
+.piltover_info p, .piltover_video  p{
     width: 700px;
     font-size: 20px;
     text-align: center;
 }
 
-.piltover-gallery{
+.piltover_gallery{
     display: flex;
     gap: 30px;
     padding: 30px;
@@ -27,7 +27,7 @@
     align-items: center;
 }
 
-.piltover-video{
+.piltover_video{
     padding: 30px;
     text-align: center;
     color: #DECEB2;
@@ -39,7 +39,7 @@
     margin-bottom: 50px;
 }
 
-.piltover-video iframe{
+.piltover_video iframe{
     height: 300px;
     width: 30%;
 }
