--- a/src/components/TerritoriesSection/PiltoverSection/PiltoverSection.module.css
+++ b/src/components/TerritoriesSection/PiltoverSection/PiltoverSection.module.css
@@ -1,15 +1,20 @@
 .piltover_info{
     display: flex;
     gap: 5px;
-    color: #DECEB2;
+    color: white;
     padding: 30px;
     justify-content: space-around;
     margin: 0 0 100px 100px;
 }
 
+.piltover_info p{
+    background-color: #222222;
+    padding: 30px;
+}
+
 .piltover_info_letter{
     font-size: 36px;
-    color: #cfbb8f;
+    color: #f16cc7;
 }
 
 .piltover_info p, .piltover_video  p{
@@ -27,10 +32,19 @@
     align-items: center;
 }
 
+.piltover_video p{
+    background-color: #222222;
+    padding: 30px;
+}
+
+.piltover_video h2{
+    color: #41aaea;
+}
+
 .piltover_video{
     padding: 30px;
     text-align: center;
-    color: #DECEB2;
+    color: white;
     display: flex;
     flex-direction: column;
     gap: 30px;
