feat: added new data and new CardSection.tsx

--- a/src/components/Button/Button.module.css
+++ b/src/components/Button/Button.module.css
@@ -50,5 +50,8 @@
 
 .button_card{
     background: none;
-    border: none;
+    border: 1px blue solid;
+    padding: 30px;
+    height: 100px;
+    cursor: pointer;
 }
