--- a/src/components/CharactersSection/CharactersSection.module.css
+++ b/src/components/CharactersSection/CharactersSection.module.css
@@ -4,6 +4,7 @@
 
 .main{
     display: flex;
+    gap: 50px;
 }
 
 .card{
@@ -14,7 +15,7 @@
 
 .info{
     width: 30%;
-    margin-right: 150px;
+    margin-right: 100px;
 }
 
 .info h2{
@@ -24,6 +25,5 @@
 
 .img{
     text-align: center;
-    margin-right:0px;
     width: 25%;
 }
