feat: completed CharactersSection.tsx

--- a/src/components/Button/Button.module.css
+++ b/src/components/Button/Button.module.css
@@ -58,7 +58,8 @@
 }
 
 .button_card_active{
-    background: #222222;
+    /*background: #222222;*/
+    background-image: url("../../images/backJinx.jpg");
     border: none;
     padding: 30px;
     height: 100px;
