--- a/src/components/TerritoriesSection/TerritoriesSection.module.css
+++ b/src/components/TerritoriesSection/TerritoriesSection.module.css
@@ -1,13 +1,15 @@
+/** {outline: 2px solid green !important;}*/
+
 .city{
     display: flex;
     gap: 140px;
     justify-content: center;
     align-items: center;
-    position: static;
     background-color: #191919;
     background-size: cover;
     padding: 60px;
     margin: 0 100px;
+    height: 250px;
 }
 
 .city_active{
@@ -19,6 +21,6 @@
 }
 
 .city_active img{
-    width: 60%;
-    height: 60%;
+    width: 110px;
+    height: 130px;
 }
