--- a/src/components/TerritoriesSection/ZaunSection/ZaunSection.module.css
+++ b/src/components/TerritoriesSection/ZaunSection/ZaunSection.module.css
@@ -1,3 +1,5 @@
+/** {outline: 2px solid green !important;}*/
+
 .zaun_info{
     display: flex;
     gap: 5px;
@@ -5,6 +7,10 @@
     padding: 30px;
     justify-content: space-between;
     margin-bottom: 100px;
+}
+
+.zaun_info img{
+    object-fit: contain;
 }
 
 .zaun_info p{
