--- a/src/components/Button/Button.module.css
+++ b/src/components/Button/Button.module.css
@@ -10,6 +10,7 @@
 }
 
 .active{
+
     font-size: 28px;
     border-bottom: 3px #edd4c8 solid;
     transition: all 0.3s;
@@ -55,6 +56,7 @@
     height: 100px;
     cursor: pointer;
     opacity: 0.5;
+    color: white;
 }
 
 .button_card_active{
@@ -65,5 +67,6 @@
     height: 100px;
     opacity: 1;
     cursor: pointer;
+    color: white;
     transition: all 0.5s;
 }
