--- a/src/components/Button/Button.module.css
+++ b/src/components/Button/Button.module.css
@@ -90,3 +90,23 @@
     width: 40px;
     transition: all 0.3s;
 }
+
+.button_video_card{
+    padding: 10px;
+    background-color: #222222;
+    border-radius: 5px;
+    border: 0;
+    cursor: pointer;
+    width: 30px;
+    color: white;
+}
+
+.button_video_card_active{
+    padding: 10px;
+    background-color: #41aaea;
+    border-radius: 5px;
+    border: 0;
+    cursor: pointer;
+    width: 40px;
+    transition: all 0.3s;
+}
