--- a/src/components/TerritoriesSection/PiltoverSection/PiltoverSection.module.css
+++ b/src/components/TerritoriesSection/PiltoverSection/PiltoverSection.module.css
@@ -1,10 +1,11 @@
 .piltover_info{
     display: flex;
-    gap: 5px;
+    gap: 30px;
     color: white;
     padding: 30px;
     justify-content: space-around;
-    margin: 0 0 100px 100px;
+    align-items: center;
+    margin: 0 100px 50px 100px;
 }
 
 .piltover_info img{
@@ -31,7 +32,7 @@
     display: flex;
     gap: 30px;
     padding: 30px;
-    margin-bottom: 100px;
+    margin-bottom: 50px;
     justify-content: center;
     align-items: center;
 }
