--- a/src/components/TerritoriesSection/ZaunSection/ZaunSection.module.css
+++ b/src/components/TerritoriesSection/ZaunSection/ZaunSection.module.css
@@ -2,11 +2,12 @@
 
 .zaun_info{
     display: flex;
-    gap: 5px;
+    gap: 30px;
     color: white;
     padding: 30px;
-    justify-content: space-between;
-    margin-bottom: 100px;
+    justify-content: space-around;
+    align-items: center;
+    margin: 0 100px 50px 100px;
 }
 
 .zaun_info img{
@@ -33,7 +34,7 @@
     display: flex;
     gap: 30px;
     padding: 30px;
-    margin-bottom: 100px;
+    margin-bottom: 50px;
     justify-content: center;
     align-items: center;
 }
