--- a/src/components/TerritoriesSection/NoxusSection/NoxusSection.module.css
+++ b/src/components/TerritoriesSection/NoxusSection/NoxusSection.module.css
@@ -41,6 +41,11 @@
     align-items: center;
 }
 
+.modal_img{
+    width: 100%;
+    height: 100%;
+}
+
 .noxus_video{
     padding: 30px;
     text-align: center;
