--- a/src/components/TerritoriesSection/ZaunSection/ZaunSection.module.css
+++ b/src/components/TerritoriesSection/ZaunSection/ZaunSection.module.css
@@ -39,6 +39,11 @@
     align-items: center;
 }
 
+.modal_img{
+    width: 100%;
+    height: 100%;
+}
+
 .zaun_video{
     padding: 30px;
     text-align: center;
